301-ISTIO/vs_2_versions_istio/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-v1
  namespace: doumx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
      version: v1
  template:
    metadata:
      labels:
        app: test
        version: v1
    spec:
      containers:
        - name: test
          image: httpd
          ports:
            - containerPort: 80
