301-ISTIO/vs_2_versions_istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-doumx
  namespace: doumx
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
  - name: http
    port: 80
    targetPort: 80
