301-ISTIO/vs_2_versions_istio/distinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: doumx-destination
  namespace: doumx
spec:
  host: "service-doumx"
  trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  version: v2
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
